--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.13.0"
   }
 }
