--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
     "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.13.0"
