--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.13.0"
   }
